# xiiid-token-solana

./: .gitignore  Anchor.toml  AtNfXEt9vSZtHovxVYKXrfFwATfddmeMvApugZzcdWiQ.json  Cargo.toml  package-lock.json  package.json
docker-target/release/.fingerprint/ahash-dfda4aa432a41c30/: build-script-build-script-build  build-script-build-script-build.json
docker-target/release/.fingerprint/anchor-derive-space-b3bc567daf8e92d9/: lib-anchor_derive_space  lib-anchor_derive_space.json
docker-target/release/.fingerprint/anchor-lang-idl-spec-199b0d80a0c53394/: lib-anchor_lang_idl_spec  lib-anchor_lang_idl_spec.json
docker-target/release/.fingerprint/anyhow-045bbff162b02beb/: build-script-build-script-build  build-script-build-script-build.json
docker-target/release/.fingerprint/anyhow-403d1f96561e9172/: run-build-script-build-script-build  run-build-script-build-script-build.json
docker-target/release/.fingerprint/anyhow-e2b78f2db44ae94f/: lib-anyhow  lib-anyhow.json
programs/xiiid-token-solana/: Cargo.toml
programs/xiiid-token-solana/src/: lib.rs
spl-token/: 01.createToken.js  02.registerMetadata.js  03.mintToken.js  04.disableFreeze.js  04.disableMint.js  05.incognitoTranfer.js  05.transfer.js  06.lockupTransfer.ts  07.claim.ts  08.linearLockupTransfer.ts  08.linearVesting.ts  checkMetadata.js  getPrivateKey.js  metadata.json
spl-token/config/: token-config-prd.json  token-config.json
spl-token/wallet/: lockup-recipient.json  lockup-recipient2.json  lockup-recipient3.json  recipient.json  recipient2.json
tests/: 00_init.ts
(+291 files in other folders)
